[package]
name = "rust-key-store"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.8.6"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2" 